// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-cTAqQK ebKLPl"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jObWnj bHuFFe"
    >
      <span
        class="sc-bBHHxi cYBYAr"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-bdvvtL kSEjuX"
        >
          <span
            class="SVGInline SVGInline--cleaned centeredSvgIcon"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg centeredSvgIcon-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Title
    </h4>
    <div
      class="sc-hUpaCq bLcPkw"
    />
    <div
      class="sc-iAKWXU bheVEm disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-cTAqQK ebKLPl"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jObWnj bHuFFe"
    >
      Neo4j Browser Guides 
    </h4>
    <div
      class="sc-hUpaCq bLcPkw"
    />
    <div
      class="sc-dvQaRk LhqUp slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-cxpSdN iWOlhl remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-JkixQ jAmVcX"
      >
        <div
          class="sc-hGPBjI hNuyvV"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-dSfdvi oLYhf"
      >
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-JkixQ jAmVcX"
      >
        <div
          class="sc-hGPBjI hNuyvV"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-dSfdvi oLYhf"
      >
        <li
          class="sc-jivBlf gIzzxP"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-dkQkyq eNtbry"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-bdvvtL jIQruX sl-bin"
              style="line-height: inherit;"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-gGPzkF eDbzAm"
      >
        <a
          class="sc-iwjdpV bThOnN"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-cTAqQK ebKLPl"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jObWnj bHuFFe"
    >
      Neo4j Browser Guides 
    </h4>
    <div
      class="sc-hUpaCq bLcPkw"
    />
    <div
      class="sc-dvQaRk LhqUp slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-cxpSdN iWOlhl remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-JkixQ jAmVcX"
      >
        <div
          class="sc-hGPBjI hNuyvV"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-dSfdvi oLYhf"
      >
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cHzqoD hcxvgF"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-cxpSdN iWOlhl remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-JkixQ kUFoFp"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-gGPzkF eDbzAm"
      >
        <a
          class="sc-iwjdpV bThOnN"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
